--- a/pom.xml
+++ b/pom.xml
@@ -51,12 +51,12 @@
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
-			<version>2.8.0</version>
+			<version>2.4.0</version>
 		</dependency>
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger-ui</artifactId>
-			<version>2.8.0</version>
+			<version>2.4.0</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
 		<!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
@@ -121,20 +121,22 @@
 		<dependency>
 			<groupId>org.deeplearning4j</groupId>
 			<artifactId>deeplearning4j-zoo</artifactId>
-			<version>0.9.1</version>
+			<version>${dl4j.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.nd4j</groupId>
 			<artifactId>nd4j-native-platform</artifactId>
-			<version>0.9.1</version>
+			<version>${dl4j.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.deeplearning4j</groupId>
 			<artifactId>deeplearning4j-core</artifactId>
-			<version>0.9.1</version>
+			<version>${dl4j.version}</version>
 		</dependency>
+
 	</dependencies>
+
 <!--
         <dependency>
             <groupId>org.bytedeco</groupId>
